--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/detail.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/detail.html
@@ -696,7 +696,10 @@
 							});
 							mui.openWindow({
 								id: 'emai_summate',
-								url: "../../login/emai_summate.html"
+								url: "../../login/emai_summate.html",
+								extras: {
+									formPageName: "detail"
+								}
 							});
 						}
 					}
