--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/pro_commentslist.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/pro_commentslist.html
@@ -178,7 +178,10 @@
 							});
 							mui.openWindow({
 								id: 'emai_summate',
-								url:"../../login/emai_summate.html"
+								url:"../../login/emai_summate.html",
+								extras: {
+									formPageName: "pro_commentslist"
+								}
 							});
 						}
 					}
