--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -311,7 +311,7 @@
 						params[Api.Params.password] = hex_sha1(hex_md5(password));
 						params[Api.Params.addressId] = doc.getElementById('city').getAttribute('data-val');
 						params[Api.Params.vCode] = doc.getElementById('verificationCode').value.trim();
-						//params[Api.Params.rCode] = doc.getElementById('introduction-code').value.trim();
+						params[Api.Params.rCode] = "";
 						params[Api.Params.loginType] = LOGIN_TYPE.EMAIL;
 						Repository.User.register(params, {
 							ok: function(data) {
@@ -322,35 +322,7 @@
 							},
 							ng: function(data) {
 								waiting.close();
-								if(data.email=="1003"){
-									mui.toast("email"+TextMessage.errorCode_1003, {
-										duration: 'long',
-										type: 'div'
-									})
-								}
-								$.each(data, function(key, value) {
-									console.log(key, value);
-									switch(value) {
-										case "1001":
-											if(key == Api.Params.vCode) {
-												mui.toast(TextMessage.verificationCode + TextMessage.errorCode_1001, {
-													duration: 'long',
-													type: 'div'
-												})
-											}
-											break;
-										case "1002":
-											if(key == Api.Params.username) {
-												mui.toast(TextMessage.username + TextMessage.errorCode_1002, {
-													duration: 'long',
-													type: 'div'
-												})
-											}
-											break;
-										default:
-											break;
-									}
-								});
+								Api.callback_ng(data);
 							},
 							error: function() {
 								waiting.close();
