--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/product_want_to_buy.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/product_want_to_buy.html
@@ -53,7 +53,7 @@
 				     <br />
 					<div class="ka_description lang" data-locale="commodity_want_forbidentext"></div>
 					<div class="ka_userbox">
-						<button type="button" class="mui-btn mui-btn-red ka_prologsure lang"  data-locale="commodity_want_butonsure" onclick="publishs()"></button>
+						<button type="button" class="mui-btn mui-btn-red ka_prologsure lang"  data-locale="commodity_want_butonsure" onclick="publishscheck()"></button>
 					</div>
 					<br/>
 					<div class="showimg"></div>
@@ -71,6 +71,14 @@
 $(function() {
 	$(".ka_noborder").attr("placeholder", TextMessage.commodity_descriptionlength);
 });
+//email check
+function publishscheck(){
+	if (!Repository.User.isEmptyEmail()) {
+		 return;
+	}else{
+		publishs();
+	}
+}
 //submit form
 function publishs() {
 	var buy_sell_flag = "1";
