--- a/kankan/pages/main/home.html
+++ b/kankan/pages/main/home.html
@@ -199,7 +199,8 @@
 			});
 			window.addEventListener('praiseid', function(event) {
 				var praiseid = event.detail.praiseid;
-				if(praiseid!="undefined"){
+				//alert(typeof(praiseid));
+				if(typeof(praiseid) != "undefined"){
 					var wids=$('.mui-scroll .mui-active').index() + 1;
 					var page = plus.webview.getWebviewById("pullrefresh_sub_" + wids + ".html");
 					mui.fire(page, 'good', {
