交易页面修改

--- a/kankan/pages/transaction/select_item.html
+++ b/kankan/pages/transaction/select_item.html
@@ -55,7 +55,7 @@
 				})
 				choice = choice.substr(0, choice.length - 1);
 				if(choice == '') {
-					alert(TextMessage.commdSelect);
+					mui.alert(TextMessage.commdSelect);
 
 					return false;
 				}
