错别字改修

--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -465,7 +465,7 @@ function publishs() {
 		return false;
 	}
 	if(comm_name.trim().length>40){
-		mui.toast(TextMessage.TextMessage.pro_namelength, {
+		mui.toast(TextMessage.pro_namelength, {
 			duration: 'long',
 			type: 'div'
 		});
