更新密码时添加了密码验证。

--- a/kankan/pages/login/update_password.html
+++ b/kankan/pages/login/update_password.html
@@ -87,11 +87,18 @@
 					var emailBox = doc.getElementById('email');
 					sendButton.addEventListener('tap', function() {
 						var waiting = plus.nativeUI.showWaiting();
-						if(doc.getElementById('password').value.trim()==""){
+						var password = doc.getElementById('password').value.trim();
+						if(password == ""){
 							mui.toast(TextMessage.password_notnull, {
 								duration: 'long',
 								type: 'div'
 							});
+							waiting.close();
+							return false;
+						}
+						var reg = /^[0-9a-zA-Z]{6,16}$/
+						if (!reg.test(password)) {
+							plus.nativeUI.toast(TextMessage.password_error);
 							waiting.close();
 							return false;
 						}
