详情页轮播图点击箭头滑动处理，图片居中再处理，交易页面验证添加

--- a/kankan/pages/main/products/request.html
+++ b/kankan/pages/main/products/request.html
@@ -240,11 +240,14 @@
 					},
 					ng: function(data) {
 						console.log(data);
+						Api.callback_ng(data);
 						if(data=="1000"|| data=="2002"){
 							$(".jiaoyihitext").hide();
+							mui.openWindow({
+								url:"../../login/login.html",
+								id:"login",
+							});
 						}
-						Api.callback_ng(data);
-						
 					}
 				});
 			});
