站内信文言改修，请求页面错误处理添加

--- a/kankan/pages/main/news.html
+++ b/kankan/pages/main/news.html
@@ -69,6 +69,8 @@
 			      },
 			      down : {
 				      	contentrefresh: TextMessage.loading,
+				      	contentdown:TextMessage.pull_down,
+				      	contentover:TextMessage.release,
 					    callback :downRefresh 
 			    	}
 			    },
