--- a/kankan/pages/main/products/request.html
+++ b/kankan/pages/main/products/request.html
@@ -243,11 +243,10 @@
 						Api.callback_ng(data);
 						if(data=="1000"|| data=="2002"){
 							$(".jiaoyihitext").hide();
-							mui.openWindow({
-								url:"../../login/login.html",
-								id:"login",
-							});
+							var mainPage = plus.webview.getLaunchWebview();
+       							mainPage.show();
 						}
+						
 					}
 				});
 			});
