用户页面昵称的输入框的默认显示值

--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -249,7 +249,7 @@
 								</div>
 								<div class="ka_usernicknamebox">
 								<h6 class="lang" data-locale="uinfousername"></h6>
-								<input type="text" name="nickname" id="nickname" value="" placeholder="mary" class="ka_userfontsize" maxlength="50" />
+								<input type="text" name="nickname" id="nickname" value="" placeholder="" data-locale="nameplocder" class="ka_userfontsize lang" maxlength="50" />
 								</div>
 								<h6 class="lang" data-locale="introducetext"></h6>
 								<textarea name="introduce" id="introduce" rows="5" cols="" class="ka_userfontsize" maxlength="500"></textarea>
