--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -207,7 +207,41 @@
 						canClick = false;
 						var email = doc.getElementById('email').value.trim();
 						if (email == "") {
-							plus.nativeUI.alert(TextMessage.emailnull);
+							plus.nativeUI.toast(TextMessage.emailnull);
+							return;
+						}
+						var reg = /^(\w-*\.*)+@(\w-?)+(\.\w{2,})+$/
+						if (!reg.test(email)) {
+							plus.nativeUI.toast(TextMessage.email_error1);
+							return;
+						}
+						var username = doc.getElementById('username').value.trim();
+						if (username == "") {
+							plus.nativeUI.toast(TextMessage.username_null);
+							return;
+						}
+						if (username.length > 10) {
+							plus.nativeUI.toast(TextMessage.username_error);
+							return;
+						}
+						var password = doc.getElementById('password').value.trim();
+						if(password == ""){
+							plus.nativeUI.toast(TextMessage.password_notnull);
+							return;
+						}
+						var reg = /^[0-9a-zA-Z]{6,16}$/
+						if (!reg.test(password)) {
+							plus.nativeUI.toast(TextMessage.password_error);
+							return;
+						}
+						var passwordConfirm = doc.getElementById('passwordConfirm').value.trim();
+						if (password != passwordConfirm) {
+							plus.nativeUI.toast(TextMessage.confirmPwd_error);
+							return;
+						}
+						var city = doc.getElementById('city').getAttribute('data-val');
+						if (city == null) {
+							plus.nativeUI.toast(TextMessage.addressnull);
 							return;
 						}
 						var waiting = plus.nativeUI.showWaiting();
